# lambdas

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  SETUP.md  blog_article.md  lambda_entry.py  memory.md  pyproject.toml
docs/: troubleshooting.md
examples/: direct_test_event.json  lambda_test_event.json  test_document_processor.py
scripts/: deploy_and_secrets.sh
src/config/: settings.py
src/lambda_functions/document_processor/: app.py  handler.py  models.py  processor.py
src/utils/: document_parsers.py  llm_client.py
terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  tf-plan  variables.tf
tests/: test_document_processor.py
